[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/fnt/04B_03_.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scene/menus/ChooseWeapon.gd" type="Script" id=2]
[ext_resource path="res://asset/theme/GameLarge.tres" type="Theme" id=3]
[ext_resource path="res://asset/gfx/bg.png" type="Texture" id=4]
[ext_resource path="res://asset/gfx/player.png" type="Texture" id=5]

[sub_resource type="TileSet" id=3]
0/name = "bg.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "bg.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "bg.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "bg.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_bottom = -3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="ChooseWeapon" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 2, 0, 11, 0, 0, 12, 1, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 2, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 0, 0, 65550, 2, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 1, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 2, 0, 196610, 0, 0, 196611, 2, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 1, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 2, 0, 262154, 0, 0, 262155, 1, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 2, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 1, 0, 327691, 0, 0, 327692, 0, 0, 327693, 2, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 1, 0, 393226, 0, 0, 393227, 1, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 2, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 1, 0, 458765, 0, 0, 458766, 0, 0, 458767, 2, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 2, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 1, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 1, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 1, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 1, 0, 589837, 0, 0, 589838, 1, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 2, 0, 655363, 0, 0, 655364, 2, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 1, 0, 655369, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 655375, 1, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 1, 0, 720904, 0, 0, 720905, 0, 0, 720906, 1, 0, 720907, 0, 0, 720908, 0, 0, 720909, 1, 0, 720910, 0, 0, 720911, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 1, 0, 786444, 0, 0, 786445, 0, 0, 786446, 1, 0, 786447, 0, 0 )

[node name="Victory" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Choose your weapon!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageDiceLabel" type="Label" parent="."]
margin_left = 104.0
margin_top = 48.0
margin_right = 186.0
margin_bottom = 64.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Base damage: 2d4+1
Upgrade Cost: Medium
Balanced playthrough!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageDiceLabel2" type="Label" parent="."]
margin_left = 104.0
margin_top = 80.0
margin_right = 195.0
margin_bottom = 96.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Base damage: 1d8+0
Upgrade Cost: High
Easy end game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageDiceLabel3" type="Label" parent="."]
margin_left = 104.0
margin_top = 112.0
margin_right = 195.0
margin_bottom = 128.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Base damage: 3d2+1
Upgrade Cost: Low
Easy early game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceLabel" type="Label" parent="."]
margin_top = 152.0
margin_right = 250.0
margin_bottom = 168.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Your Choice: none"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sword" type="Button" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 64.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Sword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spear" type="Button" parent="."]
margin_left = 48.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 96.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Spear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bow" type="Button" parent="."]
margin_left = 48.0
margin_top = 112.0
margin_right = 96.0
margin_bottom = 128.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Bow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Begin" type="Button" parent="."]
margin_left = 160.0
margin_top = 176.0
margin_right = 240.0
margin_bottom = 192.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
disabled = true
shortcut_in_tooltip = false
text = "Begin 1st stage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 125, 168 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[connection signal="pressed" from="Sword" to="." method="_on_Sword_pressed"]
[connection signal="pressed" from="Spear" to="." method="_on_Spear_pressed"]
[connection signal="pressed" from="Bow" to="." method="_on_Bow_pressed"]
[connection signal="pressed" from="Begin" to="." method="_on_Begin_pressed"]
